This file contain the log of changes for the main development branch (trunk).
More detailed information about incremental changes can be found in the
history management of subversion.

2015-01-23 releases/3.12.0
        - Library dependencies are now recorded in shared library builds,
          which is intended to simplify linking against the Ipopt library.
          However, the pkg-config and ipopt_addlibs files do not reflect
          this change yet (it is rather experimental, imho). To restore
          the previous behavior, use --disable-dependency-linking as
          configure option. In case of problems, contact Ted Ralphs.
        - If linking against Intel MKL for Blas/lapack, use of Pardiso
          from MKL is now automatically enabled. Note, that this will
          change the default solver on Ipopt builds without any of the
          linear solvers MA27, MA57, MA97, and MA86 (these take preference
          over Pardiso). [#216]
        - dropped support for old HSL sources (<2013; ThirdParty/HSLold)
        - updated ASL sources, now downloaded from AMPL-MP (github)
        - some internal changes to data structures (improved use of compound
          component spaces) and addition of IpLapackDppsv (by Gabe Hackebeil)

2015-01-18 releases/3.11.10
        - fix a memory allocation in Java interface in cases where jint
          has a different size than int [r2513]
        - the buildsystem now tries the Accelerate framework instead of
          vecLib for finding Blas/Lapack on MacOS X 

2014-08-16 releases/3.11.9
        - fix compilation issue of Java interface on systems where Index
          and jint have different size [r2498, #241]
        - work around failing check for random number generator with gcc
          4.8.3 [r2495, r2496]
        - readded IpTaggedObject.cpp to list of sources to compile in
          MSVS v8-ifort project file [r2492]
        - work around missing support for thread-local storage with gcc < 4.5